--- a/1/index.html
+++ b/1/index.html
@@ -25,13 +25,39 @@
             <!--Start Nav Section-->
             <nav class="container navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#home"><img class="img-fluid" src="./img/Cuda-logo.png" alt="Cuda Portfolio"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars text-white"></i>
-                </button>
+                <button class="navbar-toggler" onclick=""><i class="fas fa-bars text-white"></i></button>
                 <div class="collapse navbar-collapse " id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto d-flex justify-content-between">
                         <li class="nav-item active">
                             <a class="nav-link active" href="#home">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#service">SERVICE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#team">TEAM</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#skills">skills</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#portfolio">portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about-us">about us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact-us">contact us</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <nav class="nav-mobile d-none">
+                <button><i class="fas fa-times text-white"></i></button>
+                <div>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#service">SERVICE</a>
