--- a/1/index.html
+++ b/1/index.html
@@ -10,13 +10,13 @@
     <!--Font Awesome-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" rel="stylesheet"/>
     <!--Bootstrap CSS v4.5.2-->
-    <link href="/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="css/bootstrap.min.css" rel="stylesheet"/>
     <!-- Animated Radial Progress Bars -->
-    <link href="/css/radial-progress.css" rel="stylesheet"/>
+    <link href="css/radial-progress.css" rel="stylesheet"/>
     
     <!--Self Style-->
-    <link href="/css/style.css" rel="stylesheet"/>
-    <link href="/css/responsive.css" rel="stylesheet"/>
+    <link href="css/style.css" rel="stylesheet"/>
+    <link href="css/responsive.css" rel="stylesheet"/>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
     <!--Start Header Section-->
@@ -24,7 +24,7 @@
         <div class="fixed-top">
             <!--Start Nav Section-->
             <nav class="container navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#home"><img class="img-fluid" src="./img/Cuda-logo.png" alt="Cuda Portfolio"></a>
+                <a class="navbar-brand" href="#home"><img class="img-fluid" src="img/Cuda-logo.png" alt="Cuda Portfolio"></a>
                 <button class="navbar-toggler" onclick=""><i class="fas fa-bars text-white"></i></button>
                 <div class="collapse navbar-collapse " id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto d-flex justify-content-between">
@@ -102,7 +102,7 @@
             <section class="row">
                 <div class="col-lg-3 col-md-6 col-12 pt-5">
                     <div class="card card-custom">
-                        <img src="./img/flag-icon.png" class=" img-fluid card-img-top" alt="Branding">
+                        <img src="img/flag-icon.png" class=" img-fluid card-img-top" alt="Branding">
                         <div class="card-body text-center mt-4">
                             <h3 class="card-title">Branding</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-12 pt-5">
                     <div class="card card-custom">
-                        <img src="./img/design-icon.png" class=" img-fluid card-img-top" alt="Design">
+                        <img src="img/design-icon.png" class=" img-fluid card-img-top" alt="Design">
                         <div class="card-body text-center mt-4">
                             <h3 class="card-title">Design</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-12 pt-5">
                     <div class="card card-custom">
-                        <img src="./img/development-icon.png" class=" img-fluid card-img-top" alt="Development">
+                        <img src="img/development-icon.png" class=" img-fluid card-img-top" alt="Development">
                         <div class="card-body text-center mt-4">
                             <h3 class="card-title">Development</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-12 pt-5">
                     <div class="card card-custom">
-                        <img src="./img/rocket-science-icon.png" class=" img-fluid card-img-top" alt="Rocket Science">
+                        <img src="img/rocket-science-icon.png" class=" img-fluid card-img-top" alt="Rocket Science">
                         <div class="card-body text-center mt-4">
                             <h3 class="card-title">Rocket Science</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.</p>
@@ -154,7 +154,7 @@
             <section class="row">
                 <div class="col-lg-3 col-md-6 col-12 pt-5">
                     <div class="card card-custom">
-                        <img src="./img/k-ross.png" class=" img-fluid card-img-top" alt="Anna Hathawat">
+                        <img src="img/k-ross.png" class=" img-fluid card-img-top" alt="Anna Hathawat">
                         <div class="card-body text-center mt-4">
                             <h3 class="card-title">Anna Hathawat</h3>
                             <p class="card-designation">CEO / Merkating guru</p>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-12 pt-5">
                     <div class="card card-custom">
-                        <img src="./img/harvey.png" class=" img-fluid card-img-top" alt="Kate Upton">
+                        <img src="img/harvey.png" class=" img-fluid card-img-top" alt="Kate Upton">
                         <div class="card-body text-center mt-4">
                             <h3 class="card-title">Kate Upton</h3>
                             <p class="card-designation">creative director</p>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-12 pt-5">
                     <div class="card card-custom">
-                        <img src="./img/emile.png" class=" img-fluid card-img-top" alt="Olivia Wild">
+                        <img src="img/emile.png" class=" img-fluid card-img-top" alt="Olivia Wild">
                         <div class="card-body text-center mt-4">
                             <h3 class="card-title">Olivia Wild</h3>
                             <p class="card-designation">Lead Designer</p>
@@ -201,7 +201,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-12 pt-5">
                     <div class="card card-custom">
-                        <img src="./img/samuel.png" class=" img-fluid card-img-top" alt="Ashley Greene">
+                        <img src="img/samuel.png" class=" img-fluid card-img-top" alt="Ashley Greene">
                         <div class="card-body text-center mt-4">
                             <h3 class="card-title">Ashley Greene</h3>
                             <p class="card-designation">SEO / Developer</p>
@@ -285,19 +285,19 @@
             </section>
             <div class="row grid">
                 <article class="col-md-6 col-12 element-item web apps pt-5">
-                    <img src="/img/portfolio-1.png" class="img-fluid" alt="Isometric prespective moke-up">
+                    <img src="img/portfolio-1.png" class="img-fluid" alt="Isometric prespective moke-up">
                     <p class="text-center text-uppercase pt-3">Isometric prespective moke-up</p>
                 </article>
                 <article class="col-md-6 col-12 element-item web icons pt-5">
-                    <img src="/img/portfolio-2.png" class="img-fluid" alt="Time zone app ui">
+                    <img src="img/portfolio-2.png" class="img-fluid" alt="Time zone app ui">
                     <p class="text-center text-uppercase pt-3">Time zone app ui</p>
                 </article>
                 <article class="col-md-6 col-12 element-item apps pt-5">
-                    <img src="/img/portfolio-3.png" class="img-fluid" alt="Viro media players ui">
+                    <img src="img/portfolio-3.png" class="img-fluid" alt="Viro media players ui">
                     <p class="text-center text-uppercase pt-3">Viro media players ui</p>
                 </article>
                 <article class="col-md-6 col-12 element-item icons pt-5">
-                    <img src="/img/portfolio-4.png" class="img-fluid" alt="Blog / magazine flat ui kit">
+                    <img src="img/portfolio-4.png" class="img-fluid" alt="Blog / magazine flat ui kit">
                     <p class="text-center text-uppercase pt-3">Blog / magazine flat ui kit</p>
                 </article>
             </div>
@@ -319,7 +319,7 @@
             </section>
             <section class="row">
                 <div class="col-md-6 col-12 media mt-5">
-                    <img src="/img/edward.jpg" class="img-round mr-5" alt="...">
+                    <img src="img/edward.jpg" class="img-round mr-5" alt="...">
                     <div class="media-body px-3">
                         <em><h4 class="font-weight-lighter">“Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque."</h4></em>
                         <h3 class="text-uppercase mt-4 mb-0">Chanel Iman</h3>
@@ -327,7 +327,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-12 media mt-5">
-                    <img src="/img/daisy.png" class="img-round mr-5" alt="...">
+                    <img src="img/daisy.png" class="img-round mr-5" alt="...">
                     <div class="media-body px-3">
                         <em><h4 class="font-weight-lighter">“Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.”</h4></em>
                         <h3 class="text-uppercase mt-4 mb-0">ADRIANA LIMA</h3>
@@ -335,7 +335,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-12 media mt-5">
-                    <img src="/img/melissa.png" class="img-round mr-5" alt="...">
+                    <img src="img/melissa.png" class="img-round mr-5" alt="...">
                     <div class="media-body px-3">
                         <em><h4 class="font-weight-lighter">“Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.”</h4></em>
                         <h3 class="text-uppercase mt-4 mb-0">ANNE HATHAWAY</h3>
@@ -343,7 +343,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-12 media mt-5">
-                    <img src="/img/cooper.png" class="img-round mr-5" alt="...">
+                    <img src="img/cooper.png" class="img-round mr-5" alt="...">
                     <div class="media-body px-3">
                         <em><h4 class="font-weight-lighter">“Phasellus non purus vel arcu tempor commodo. Fusce semper, purus vel luctus molestie, risus sem cursus neque.”</h4></em>
                         <h3 class="text-uppercase mt-4 mb-0">EMMA STONE</h3>
@@ -418,10 +418,10 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Animated Radial Progress Bars -->
-    <script src="/js/radial-progress.js"></script>
+    <script src="js/radial-progress.js"></script>
     <!-- Isotope -->
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <!--Self Script-->
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
