Design a music app

--- a/Watch-collection/index.html
+++ b/Watch-collection/index.html
@@ -22,7 +22,7 @@
     <div class="container-fluid px-0">
         <!-- navbear start -->
         <div class="bg-dark">
-            <div class="container">
+            <div class="container-md">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid">
                         <a class="navbar-brand d-lg-none" href="#"><img src="./img/apple-logo.svg" alt=""></a>
@@ -72,7 +72,7 @@
         
         <!-- secoldary-menu start -->
         <section class="secoldary-menu-wrapper">
-            <div class="container py-3">
+            <div class="container-md py-3">
                 <div class="secoldary-menu-section w-100">
                     <div class="d-flex flex-column align-items-center secoldary-menu-item">
                         <img src="./img/watch_nav_se__en4ntkxi5guq_large.svg" alt="Apple Watch Series 6">
@@ -155,7 +155,7 @@
                     <a href="#" class="compare-link">Compare all models</a>
                 </div>
                 <div class="row compare-items">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="card">
                             <img src="./img/compare_se__crebhd9hhdea_large.jpg" class="card-img-top img-fluid p-5" alt="Apple Watch Series 6">
                             <div class="card-body">
@@ -179,7 +179,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="card">
                             <img src="./img/compare_s6__evsi0wlzp4ya_large.jpg" class="card-img-top img-fluid p-5" alt="Apple Watch Series 6">
                             <div class="card-body">
@@ -203,7 +203,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-sm-6">
                         <div class="card">
                             <img src="./img/compare_se__crebhd9hhdea_large.jpg" class="card-img-top img-fluid p-5" alt="Apple Watch Series 6">
                             <div class="card-body">
